started implementation of creation and joining dynamics lobbies

--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -10,7 +10,6 @@
         android:id="@+id/joingametv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -22,7 +21,7 @@
         android:id="@+id/inputidgamelabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Game code:"
+        android:text="@string/game_code"
         app:layout_constraintBottom_toTopOf="@+id/inputidgame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,20 +33,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="@string/insert_game_code"
         android:inputType="textPersonName"
-        android:text="Game code"
         app:layout_constraintBottom_toTopOf="@+id/joinbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/joingametv"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintVertical_bias="0.45"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/joinbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Join"
+        android:text="@string/join"
         app:layout_constraintBottom_toTopOf="@+id/waitstart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -59,7 +59,7 @@
         android:id="@+id/waitstart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wait"
+        android:text="@string/wait"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
