--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -59,8 +59,7 @@
         android:id="@+id/waitstart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/wait"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
