--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/timerLayout"
+    android:background="@drawable/home_bg"
     tools:context=".TimerActivity">
 
     <TextView
