--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#80FFFFFF</item>
+        <item name="colorPrimaryDark">#006C3D</item>
+        <item name="colorAccent">#003920</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_theme</item>
-
+        <item name="android:windowBackground">@drawable/splash_screen_bg</item>
+        <item name="android:windowContentOverlay">@drawable/splash_theme</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
