--- a/app/src/main/res/drawable/splash_theme.xml
+++ b/app/src/main/res/drawable/splash_theme.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-<item >
-    <bitmap android:gravity="center"
-        android:src="@drawable/ctf"
+    <item android:drawable="@drawable/splash_screen_bg"
         />
-</item>
+    <item >
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/ctf" />
+    </item>
 </layer-list>
