--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#80154906</color>
+    <color name="colorPrimaryDark">#093000</color>
+    <color name="colorAccent">#2ADA03</color>
     <color name="gray">#FFFFFF</color>
+    <color name="semiTransparent">#80FFFFFF</color>
 </resources>
