--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/myLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:id="@+id/welcome"
+        android:layout_width="238dp"
+        android:layout_height="199dp"
+        android:text="@string/start_new_game"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,14 +26,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
-        android:layout_marginTop="400dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="10dp"
+        android:background="@drawable/button"
         android:text="@string/create_lobby"
-        app:layout_constraintBottom_toTopOf="@+id/button_join"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome"
+        app:layout_constraintVertical_bias="0.253" />
 
     <Button
         android:id="@+id/button_join"
@@ -41,12 +45,16 @@
         android:layout_marginStart="162dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="200dp"
+        android:background="@drawable/button"
         android:text="@string/join_a_lobby"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_create" />
+        app:layout_constraintTop_toBottomOf="@+id/button_create"
+        app:layout_constraintVertical_bias="0.011" />
 
     <TextView
         android:id="@+id/azimuth"
@@ -56,7 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myLocation"
+        app:layout_constraintTop_toBottomOf="@+id/welcome"
         app:layout_constraintVertical_bias="0.509" />
 
 
