--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:id="@+id/lostsView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Losts:"
+            android:text="@string/losts"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
             android:id="@+id/tiesView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Losts:"
+            android:text="@string/losts"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/idView"
             android:layout_width="306dp"
             android:layout_height="25dp"
-            android:text="ID:"
+            android:text="@string/id"
             android:textAlignment="inherit"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,10 +66,10 @@
             app:layout_constraintVertical_bias="0.228" />
 
         <TextView
-            android:id="@+id/nameView"
+            android:id="@+id/nicknameView"
             android:layout_width="306dp"
             android:layout_height="26dp"
-            android:text="Name: "
+            android:text="@string/nickname"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
             android:id="@+id/winsView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wins: "
+            android:text="@string/wins"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
