--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,6 +9,7 @@
     tools:context=".GameActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/tabbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
